# sarbule

./: .dockerignore  .gitignore  Cargo.toml  README.md  dockerfile  fly.toml  package-lock.json  package.json
assets/: main.js  style.css
src/: db.rs  error.rs  handlers.rs  main.rs  models.rs  state.rs
templates/: index.html
tests/: quick_dev.rs
